--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/PresentationPanel.form
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/PresentationPanel.form
@@ -88,8 +88,8 @@
               <Image iconType="3" name="/com/davidecavestro/timekeeper/gui/images/splash.png"/>
             </Property>
             <Property name="iconTextGap" type="int" value="-300"/>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[420, 300]"/>
+            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="null"/>
             </Property>
           </Properties>
           <AuxValues>
