--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/About.form
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/About.form
@@ -138,7 +138,7 @@
                   <Font name="Monospaced" size="12" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="_context.getApplicationData ().getBuildNumber ()&#xa;+&quot; [&quot;&#xa;+com.davidecavestro.common.util.CalendarUtils.getTimestamp (&#xa;&#x9;_context.getApplicationData ().getBuildDate ().getTime (), &quot;yyyyMMddHHmm&quot;)&#xa;+&quot;}&quot;" type="code"/>
+                  <Connection code="_context.getApplicationData ().getBuildNumber ()&#xa;+&quot;-&quot;&#xa;+com.davidecavestro.common.util.CalendarUtils.getTimestamp (&#xa;&#x9;_context.getApplicationData ().getBuildDate ().getTime (), &quot;yyyyMMddHHmm&quot;)&#xa;" type="code"/>
                 </Property>
               </Properties>
               <AuxValues>
@@ -233,6 +233,24 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JLabel" name="jLabel10">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Monospaced" size="12" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="_context.getApplicationData ().getBuildNotes ()" type="code"/>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+                  <GridBagConstraints gridX="1" gridY="4" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="5" insetsLeft="5" insetsBottom="5" insetsRight="5" anchor="18" weightX="1.0" weightY="0.0"/>
+                </Constraint>
+              </Constraints>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel6">
