--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/MainWindow.form
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/MainWindow.form
@@ -1457,8 +1457,11 @@
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel5">
           <Properties>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[400, 28]"/>
+            </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[420, 40]"/>
+              <Dimension value="[420, 28]"/>
             </Property>
           </Properties>
           <Constraints>
