--- a/timekeeper-reports/src/dailyprogressesdetail.jrxml
+++ b/timekeeper-reports/src/dailyprogressesdetail.jrxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"  ?>
+<?xml version="1.0" encoding="ISO-8859-1"  ?>
 <!-- Created with iReport - A designer for JasperReports -->
 <!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
 <jasperReport
@@ -14,18 +14,24 @@
 		 rightMargin="30"
 		 topMargin="20"
 		 bottomMargin="20"
-		 whenNoDataType="NoPages"
+		 whenNoDataType="AllSectionsNoDetail"
 		 isTitleNewPage="false"
 		 isSummaryNewPage="false"
 		 resourceBundle="dailyprogressesdetail">
 	<property name="ireport.scriptlethandling" value="0" />
-	<property name="ireport.encoding" value="UTF-8" />
+	<property name="ireport.encoding" value="ISO-8859-1" />
 	<import value="java.util.*" />
 	<import value="net.sf.jasperreports.engine.*" />
 	<import value="net.sf.jasperreports.engine.data.*" />
 
 	<parameter name="REPORT_ROOT_NAME" isForPrompting="false" class="java.lang.String">
 		<parameterDescription><![CDATA[Report root task]]></parameterDescription>
+	</parameter>
+	<parameter name="START_DATE" isForPrompting="false" class="java.lang.String">
+		<parameterDescription><![CDATA[Filtering data from this date ]]></parameterDescription>
+	</parameter>
+	<parameter name="FINISH_DATE" isForPrompting="false" class="java.lang.String">
+		<parameterDescription><![CDATA[Filtering data to this date ]]></parameterDescription>
 	</parameter>
 
 	<field name="periodID" class="java.lang.Integer"/>
@@ -63,7 +69,7 @@
 						key="rectangle"/>
 					<graphicElement stretchType="NoStretch" pen="None"/>
 				</rectangle>
-				<textField isStretchWithOverflow="false" pattern="EEEEE dd MMMMM yyyy" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="EEEEE dd MMMMM yyyy" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="89"
 						y="1"
@@ -78,7 +84,7 @@
 					</textElement>
 				<textFieldExpression   class="java.sql.Timestamp"><![CDATA[$F{periodStart}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="444"
 						y="2"
@@ -125,7 +131,7 @@
 						key="rectangle"/>
 					<graphicElement stretchType="NoStretch" pen="None"/>
 				</rectangle>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Transparent"
 						x="0"
@@ -141,7 +147,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{taskName}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Transparent"
 						x="445"
@@ -157,7 +163,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[com.davidecavestro.timekeeper.gui.DurationUtils.formatDuration ($F{taskTotalEffort}.longValue ())]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Transparent"
 						x="0"
@@ -345,9 +351,9 @@
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="100"
+						x="9"
 						y="3"
-						width="343"
+						width="517"
 						height="13"
 						key="textField-9">
 							<printWhenExpression><![CDATA[Boolean.valueOf ($V{PAGE_NUMBER}.intValue()==1)]]></printWhenExpression>
@@ -356,13 +362,13 @@
 					<textElement textAlignment="Center" verticalAlignment="Top">
 						<font/>
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[$P{REPORT_ROOT_NAME}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[msg($R{ReportTitle/PageHeader/Data_extracted_for}, $P{REPORT_ROOT_NAME}, $P{START_DATE}, $P{FINISH_DATE})]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="100"
+						x="13"
 						y="3"
-						width="343"
+						width="507"
 						height="13"
 						key="textField-11">
 							<printWhenExpression><![CDATA[Boolean.valueOf ($V{PAGE_NUMBER}.intValue()>1)]]></printWhenExpression>
@@ -371,7 +377,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Top">
 						<font/>
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[msg($R{ReportTitle/PageHeader/Daily_action_detail_for}, $P{REPORT_ROOT_NAME})]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[msg($R{ReportTitle/PageHeader/Daily_action_detail_for}, $P{REPORT_ROOT_NAME}, $P{START_DATE}, $P{FINISH_DATE})]]></textFieldExpression>
 				</textField>
 			</band>
 		</pageHeader>
@@ -415,13 +421,13 @@
 					<reportElement
 						x="88"
 						y="9"
-						width="227"
+						width="224"
 						height="40"
 						forecolor="#000000"
 						backcolor="#FFFFFF"
 						key="textField-2"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
-					<textElement verticalAlignment="Top">
+					<textElement textAlignment="Right" verticalAlignment="Top">
 						<font fontName="Monospaced" size="12"/>
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{progressDescription}]]></textFieldExpression>
